# Redis-Client

./: .gitignore  CHANGELOG.org  README.md  meson.build  meson_options.txt
doc/: dokumentation.tex  references.bib
include/: logger.h  proxy.hpp  redis_client.h  redis_client.hpp  redis_connection.h  redis_connection.hpp  redis_exceptions.h  redis_execute.hpp  redis_lock.hpp  redis_pipe.h  redis_reply.h  redis_response.hpp  redis_transaction.hpp  redis_types.h  redis_types.hpp
src/: logger.cpp  main.cpp  proxy.cpp  redis.proto  redis_client.cpp  redis_reply.cpp
