option('asio_include_dir', type : 'string', value : '', description : 'the include dir of asio')
option('cli11_include_dir', type : 'string', value : '', description : 'the dir containing CLI11.hpp')
option('json_include_dir', type : 'string', value : '', description : 'the include dir of json')
option('spdlog_include_dir', type : 'string', value : '', description : 'the include dir of spdlog')
