option('cli11_include_dir', type : 'string', value : '/home/marcel/nvs_libs', description : 'the dir containing CLI11.hpp')
option('spdlog_include_dir', type : 'string', value : '/home/marcel/nvs_libs/spdlog', description : 'the dir containing spdlog.hpp')
option('asio_include_dir', type : 'string', value : '/home/marcel/nvs_libs/asio', description : 'the dir containing asio.hpp')